--- a/locales/en.yml
+++ b/locales/en.yml
@@ -111,7 +111,7 @@ strings:
       help: |-
         Formatting
 
-        Alita supports a large number of formatting options to make your messages more expressive. Take a look by clicking the buttons below!
+        Manager supports a large number of formatting options to make your messages more expressive. Take a look by clicking the buttons below!
     fun:
       main: "Fun"
       help: |-
@@ -131,8 +131,6 @@ strings:
         Easily change by using this module!
 
         Just type /lang and use inline keyboard to choose a language for yourself or your group.
-
-        You can help us bring bot to more languages by helping on [Crowdin](https://crowdin.com/project/alita_robot)
     locks:
       main: "Locks"
       help: |-
@@ -366,7 +364,7 @@ strings:
       %%%
       how are you</code>
       This will randomly choose between sending the first message, "hello", or the second message, "how are you".
-      Use this to make Alita feel a bit more customised! (only works in filters/notes)
+      Use this to make Bot feel a bit more customised! (only works in filters/notes)
 
       Example welcome message::
       - Every time a new user joins, they'll be presented with one of the three messages shown here.
@@ -481,7 +479,7 @@ strings:
     check_help: "Please check help on how to use this this command."
     close_btn: Close
     commands_available: |-
-      Hey There! My name is Alita.
+      Hey There! My name is Manger.
       I'm here to help you manage your groups!
       Commands available:
        × /start: Start the bot
@@ -501,8 +499,6 @@ strings:
     changed: "Language changed to <code>{lang_code}</code>"
     changelang: |-
       Here you can change language for the bot.
-
-      You can help us bring bot to more languages by helping on [Crowdin](https://crowdin.com/project/alita_robot)
     correct_usage: |-
       <b>Correct Usage:</b>
       /lang or /setlang language-code
@@ -571,7 +567,7 @@ strings:
     commands_btn: Commands & Help
     group: "I'm alive :3"
     info_page: |-
-      • @Alita_Robot
+      • @phoenixbinners
 
       <b>Version:</b> <i>{version}</i>
 
@@ -581,11 +577,11 @@ strings:
     language_btn: Language
     pm_for_help: "Contact me in PM to get the list of possible commands."
     private: |-
-      Hey there! My name is Alita ✨.
+      Hey there! My name is Manager✨.
       I'm here to help you manage your groups!
       Hit /help to find out more about how to use me to my full potential.
 
-      Join my [News Channel](http://t.me/AlitaRobotUpdates) to get information on all the latest updates.
+      Join my [News Channel](http://t.me/teamphoenixbinners) to get information on all the latest updates.
     public_help: "Press the button below to get help for <i>{help_option}</i>"
     source_code: "Source Code"
   utils:
